2009-12-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13032: Inform if page use content_from_pid
	* Fixed bug: #13083: Not possible to update TS Object PATH

2009-12-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #6378: When mapping to <div class="some a"> TV thinks it's an <a> tag

2009-12-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13103: With beLayout in TO FCEs with Container for elements are rendered wrong

2009-12-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12933: Show create new field also if edit a field in mapping module
	* Fixed bug: #13091: Bring buttons in mapping module back to the left
	* Follow-up to bugfix #13067: Missing CSS classes in page module

2009-12-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #6244: FCE backend-labels are not localized in the preview
	* Fixed bug: #13082: New CSS... for beTemplateCell CLASS (Follow-up to #13067)
	* Fixed bug: #9499: Simultanious edits not possible
	* Fixed bug: #13077: Enable Header for FCE's (optional)

2009-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13067: Missing CSS classes in page module
	* Fixed bug: #13040: HSC switch in Mapping editor doesn't save "0"
	* Follow-up to bugfix #9980: Configurable eTypes for creating fields

2009-12-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12802: Unlink element does not refresh pages 

2009-12-17  Steffen Kamper  <info@sk-typo3.de>

	* added blindIcons and debug to manual
	* Fixed bug: #13058: Icons can't be blinded in page module
	* Fixed bug: #13051: browse for records

2009-12-17 Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12949: A drag/drop cursor is shown on the TV Page object
	* Fixed bug: #13054: Drag&Drop code is hard to maintain, works only for 4.3

2009-12-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #9980: Configurable eTypes for creating fields
	* Fixed bug: #4200: Shortcut page must show content when kb_tv_cont_slide in used
